# AI-Library

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
sources/: CMakeLists.txt
sources/ARM_assembly/: 01_chapter.md  02_chapter.md  03_chapter.md  04_chapter.md  05_chapter.md  06_chapter.md  07_chapter.md  08_chapter.md  09_chapter.md  10_chapter.md  11_chapter.md  12_chapter.md  13_chapter.md  14_chapter.md  15_chapter.md  16_closure.md  CMakeLists.txt  preamble_a4.yml
sources/Advanced_Cpp/: CMakeLists.txt  Closure.md  Introduction.md  preamble_a4.yml
sources/Algoritmusok/: 0_eloszo.md  1_1_beezetes.md  CMakeLists.txt  adatszerkezetek.yml  adv.md  algoritmusok.yml  fejlett_algoritmusok.yml  kriptografia.yml  preamble.yml
sources/Architekturalis_tervezes/: 02_az architektura.md  03_szofvertervezes_alapjai.md  04_szoftverarchitektura_elvek.md  05_nfr.md  06_kovetelmenyanalizis.md  07_architektura_tervezes.md  08_modellezesi_eszkozok.md  10_1.md  11_1.md  11_2.md  11_3.md  1_1.md  1_2.md  2_1.md  2_2.md  2_3.md  3_1.md  3_2.md  3_3.md  4_1.md  4_2.md  4_3.md  4_4.md  5_1.md  5_2.md  5_3.md  6_1.md  6_2.md  6_3.md  6_4.md  7_1.md  7_2.md  7_3.md  7_4.md  8_1.md  8_2.md  8_3.md  9_1.md  9_2.md  CMakeLists.txt  (+1 more)
sources/Architekturalis_tervezes_/: 02_szoftvertervezes.md  03_szofvertervezesi_alapok.md  04_szoftverfejlesztesi_elvek.md  05_kovetelmenyanalizis.md  06_architektura_tervezes.md  08_ui_ux_tervezes.md  09_biztonsag.md  10_performancia.md  11_refactoring.md  12_esettanulmanyok.md  CMakeLists.txt  preamble_a4.yml
sources/CNNs/: 1_1.md  1_10.md  1_11.md  1_12.md  1_2.md  1_3.md  1_4.md  1_5.md  1_6.md  1_7.md  1_8.md  1_9.md  CMakeLists.txt  preamble_a4.yml
sources/Cache_Coherence/: Appendix.md  CMakeLists.txt  Chapter_1.md  Chapter_10.md  Chapter_2.md  Chapter_3.md  Chapter_4.md  Chapter_5.md  Chapter_6.md  Chapter_7.md  Chapter_8.md  Chapter_9.md  Preface.md  preamble_a4.yml
sources/Computer_Vision/: CMakeLists.txt  computer_vision.md  mermaid-filter.err  preamble_a4.yml
sources/Embedded_systems/: CMakeLists.txt  Closure.md  Preface.md  preamble_a4.yml
sources/GPGPU/: 00_Eloszo.md  10_teljesitmenyoptimalizalas.md  11_konyvtarak_es_apik.md  12_valos_alkalmazasok.md  13_cuda_jovoje.md  14_opencl_kornyezet.md  15_opencl_alapok.md  16_opencl_memoriakezeles.md  17_halado_opencl.md  18_opencl_optimalizatio.md  19_opencl_alkalmazasok.md  1_bevezetes.md  20_hibakereses.md  21_zarszo.md  2_alapfogalmak_es_attekintes.md  3_programozasi_nyelvek.md  4_bevezetes_a_cudaba.md  5_cuda_architektura.md  6_fejlesztokornyezet.md  7_cuda_alapok.md  8_memoria_kezeles.md  9_halado_cuda.md  CMakeLists.txt  fuggelek.md  preamble_a4.yml
sources/Kernel/: 10_1.md  10_2.md  11_1.md  11_2.md  12_1.md  12_2.md  12_3.md  1_1.md  1_2.md  2_1.md  2_2.md  2_3.md  3_1.md  3_2.md  3_3.md  4_1.md  4_2.md  4_3.md  4_4.md  5_1.md  5_2.md  5_3.md  5_4.md  6_1.md  6_2.md  6_3.md  6_4.md  6_5.md  7_1.md  7_2.md  7_3.md  8_1.md  8_2.md  8_3.md  9_1.md  9_2.md  9_3.md  CMakeLists.txt  kernel.md  preamble_a4.yml
sources/Machine_learning/: 10_1.md  10_2.md  10_3.md  1_1.md  1_2.md  2_1.md  2_2.md  2_3.md  2_4.md  2_5.md  (+24 more)
(+699 files in other folders)
