add_subdirectory(ARM_assembly)
add_subdirectory(Algoritmusok)
add_subdirectory(Architekturalis_tervezes)
add_subdirectory(Computer_Vision)
add_subdirectory(CNNs)
add_subdirectory(Embedded_systems)
add_subdirectory(Advanced_Cpp)
add_subdirectory(Cache_Coherence)
add_subdirectory(Qt)
add_subdirectory(Kernel)
add_subdirectory(GPGPU)
add_subdirectory(RTOS)
add_subdirectory(type_traits)
add_subdirectory(Penzugyi_alapok)
add_subdirectory(Process_management_and_memory)
add_subdirectory(Process_scheduling_memory_management)
add_subdirectory(Szamitogepes_halozatok)
